--- a/styles/utility.css
+++ b/styles/utility.css
@@ -29,7 +29,19 @@
   gap: 1rem;
 }
 
-@media screen and (min-width: 80em){
+.flex{
+  display: flex;
+}
+
+.gap-1{
+  gap: 1rem;
+}
+
+.grid{
+  display: grid;
+}
+
+@media screen and (width >= 80em){
   .container{
     --max-width: 1280px;
   }
