--- a/styles/global.css
+++ b/styles/global.css
@@ -33,7 +33,7 @@
   --fs-2xl: 2.5rem;
 
   --py-base: 1rem;
-  --py-lg: 1.5rem
+  --py-lg: 1.5rem;
   --py-xl: 3rem;
   --px-lg: 1.5rem;
 }
@@ -85,6 +85,10 @@ ul[role="list"]{
   list-style: none;
 }
 
+img{
+  vertical-align: top;
+}
+
 @media screen and (width >= 80em){
   :root{
     --fs-lg: 2rem;
@@ -92,7 +96,7 @@ ul[role="list"]{
     --fs-2xl: 4rem;
 
     --py-base: 1.5rem;
-    --py-lg: 2.5rem
+    --py-lg: 2.5rem;
     --py-xl: 5rem;
     --px-lg: 2rem;
   } 
