--- a/styles/global.css
+++ b/styles/global.css
@@ -43,7 +43,9 @@ html{
   font-weight: var(--fw-base);
   font-size: var(--fs-base);
   line-height: 1.6;
+
   color: var(--text-color-primary);
+  scroll-behavior: smooth;
 }
 
 body{
@@ -87,6 +89,8 @@ ul[role="list"]{
 
 img{
   vertical-align: top;
+  display: inline-block;
+  max-width: 100%;
 }
 
 @media screen and (width >= 80em){
