--- a/styles/global.css
+++ b/styles/global.css
@@ -46,10 +46,12 @@ html{
 
   color: var(--text-color-primary);
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body{
   background-color: var(--bg-color);
+  overflow-x: hidden;
 }
 
 h1, h2, h3{
